name:           urbit-hob
version:        0.1.0
description:    Hoon-style atom manipulation and printing functions
homepage:       https://github.com/urbit/urbit-hob#readme
bug-reports:    https://github.com/urbit/urbit-hob/issues
author:         Jared Tobin
maintainer:     jared@jtobin.io
copyright:      2019 Jared Tobin
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/urbit/urbit-hob

library
  default-language: Haskell2010
  hs-source-dirs:   src
  other-modules:    Paths_hob
  exposed-modules:
      Co,
      Muk,
      Ob
  build-depends:
      base        >= 4.7  && < 6
    , bytestring  >= 0.10 && < 1
    , containers  >= 0.5  && < 1
    , murmur3     >= 1.0  && < 2
    , text        >= 1.2  && < 2

